# lernkarten-fridrich

./: .gitignore  IMPLEMENTATION.md  Lernkarten.tex  Makefile  PLL-Lernkarten.tex  PLL01.tex  PLL01.txt  PLL02.tex  PLL02.txt  PLL03.tex  PLL03.txt  PLL04.tex  PLL04.txt  PLL05.tex  PLL05.txt  PLL06.tex  PLL06.txt  PLL07.tex  PLL07.txt  PLL08.tex  PLL08.txt  PLL09.tex  PLL09.txt  PLL10.tex  PLL10.txt  PLL11.tex  PLL11.txt  PLL12.tex  PLL12.txt  PLL13.tex  PLL13.txt  PLL14.tex  PLL14.txt  PLL15.tex  PLL15.txt  PLL16.tex  PLL16.txt  PLL17.tex  PLL17.txt  PLL18.tex  (+130 more)
.github/workflows/: python-ci.yml
2LookOLL/: ankiCardSet.csv
big-cubes/: ankiCardSet.csv
lernkarten/: __init__.py  generate_cards.py
lernkarten-pdf/: Makefile  algo-10.tex  algo-11.tex  algo-16.tex  algo-17.tex  algo-18.tex  algo-20.tex  algo-22.tex  algo-28.tex  algo-31.tex  algo-39.tex  algo-46.tex  algo-48.tex  algo-59.tex  algo-61.tex  algo-63.tex  algo-66.tex  algo-68.tex  algo-69.tex  algo-73.tex  algo-74.tex  algo-78.tex  algo-79.tex  algo-82.tex
lernkarten_fridrich.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
lernkarten_scripts/: algorithms.py  cli.py  generate_algorithm_cards.py  generate_physical_cards.py  physical_cards.py
lernkarten_scripts/resources/: Lernkarten.tex.template  Makefile.template
lernkarten_scripts/templates/: Lernkarten.tex.template  Makefile.template
oll/: ankiCardSet.csv
pll-with-arrows/: ankiCardSet.csv
scripts/: generate-algorithm-cards.py  generate-big-cube-specials.py  generate-pll.py
tests/: test_integration.py  test_latex_functionality.py
