[project]
name = "lernkarten-fridrich"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "typer>=0.19.2",
]

[project.scripts]
generate-algorithm-cards = "lernkarten_scripts.cli:app"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.13.1",
    "types-requests>=2.32.4.20250913",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lernkarten_scripts"]
